Added link to italianChicken and included image

--- a/recipes/italianChicken.html
+++ b/recipes/italianChicken.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Italian Chicken Marinade</h1>
+    <img src="../images/italianChicken.webp" alt="italian chicken marinade">
 </body>
 </html>
