Add html text + headings

--- a/recipes/italianChicken.html
+++ b/recipes/italianChicken.html
@@ -9,5 +9,21 @@
 <body>
     <h1>Italian Chicken Marinade</h1>
     <img src="../images/italianChicken.webp" alt="italian chicken marinade">
+    <h2>About this dish</h2>
+    <p>This is a very easy to follow recipe that is super tasty.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 (16 ounce) bottle of italian-style salad dressing</li>
+        <li>1 teaspoon garlic powder</li>
+        <li>1 teaspoon salt</li>
+        <li>4 skinless, boneless chicken breast halves</li>
+    </ul>
+    <h4>Instructions</h4>
+    <ol>
+        <li>whisk salad dressing, garlic powder, and salt together in a baking dish. Coat chicken</li>
+        <li>preheat outdoor grill on high and oil grate</li>
+        <li>remove chicken from marinade and discard the remaining marinade</li>
+        <li>cook chicken about 7-8 minutes on each side or until the center is no longer pink and the juices are clear</li>
+    </ol>
 </body>
 </html>
