--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/italianChicken.html">Italian Chicken Marinade</a>
+    <ul>
+    <li> <a href="recipes/italianChicken.html">Italian Chicken Marinade</a></li> 
+    <li> <a href="recipes/grilledAsparagus.html">Grilled Asparagus</a></li>
+    </ul>
 </body>
 </html>
