--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
     <li> <a href="recipes/italianChicken.html">Italian Chicken Marinade</a></li> 
     <li> <a href="recipes/grilledAsparagus.html">Grilled Asparagus</a></li>
+    <li> <a href="recipes/margarita.html">Passion Fruit Margarita</a></li>
     </ul>
 </body>
 </html>
